@@ -32,6 +32,8 @@ libpam_krb5_la_SOURCES = \
 	conv.h \
 	init.c \
 	init.h \
+	initopts.c \
+	initopts.h \
 	items.c \
 	items.h \
 	kuserok.c \
@@ -57,8 +59,6 @@ libpam_krb5_la_SOURCES = \
 pam_krb5_la_LDFLAGS = -avoid-version -export-dynamic -module -export-symbols-regex 'pam_sm.*' @SYMBOLIC_LINKER_FLAG@
 pam_krb5_la_LIBADD = libpam_krb5.la @KRB5_LIBS@ @KRB4_LIBS@ @KEYUTILS_LIBS@ $(DIRECT_LIBPAM)
 pam_krb5_la_SOURCES = \
-	initopts.c \
-	initopts.h \
 	log.c \
 	log.h \
 	map.c \
@@ -112,7 +112,6 @@ harness_LDADD = \
 	session.lo \
 	logstdio.lo \
 	map.lo \
-	initopts.lo \
 	options.lo \
 	perms.lo \
 	userinfo.lo \
